applications/nginx-6149365/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-6149365
  namespace: testingnginx

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx-6149365

  template:
    metadata:
      labels:
        app: nginx-6149365

    spec:
      containers:
      - name: nginx-6149365
        image: nginx:latest

        ports:
        - containerPort: 80
