applications/nginx-6149365/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-6149365
  namespace: testingnginx

spec:
  selector:
    app: nginx-6149365

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
